# fits2idia

./: .gitignore  .main.cc.kate-swp  Buffer.h  CMakeLists.txt  Converter.cc  Converter.h  Converter_8cc.html  Converter_8cc__incl.map  Converter_8cc__incl.md5  Converter_8h.html  Converter_8h__dep__incl.map  Converter_8h__dep__incl.md5  Converter_8h__incl.map  Converter_8h__incl.md5  Dims.h  Doxyfile  FastConverter.cc  FastConverter_8cc.html  FastConverter_8cc__incl.map  FastConverter_8cc__incl.md5  HDF5Wrapper.cc  HDF5Wrapper.h  Image.cc  Image.h  MipMap.cc  MipMap.h  MipMap_8cc.html  MipMap_8cc__incl.map  MipMap_8cc__incl.md5  MipMap_8h.html  MipMap_8h__dep__incl.map  MipMap_8h__dep__incl.md5  MipMap_8h__incl.map  MipMap_8h__incl.md5  README.md  SlowConverter.cc  SlowConverter_8cc.html  SlowConverter_8cc__incl.map  SlowConverter_8cc__incl.md5  Stats.cc  (+299 more)
.github/workflows/: AddToCartaVisProject.yml  doxygen.yml
docs/: Doxyfile
docs/static/: main.md
scripts/: convertertest.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  (+32 more)
src/: Converter.cc  Converter.h  FastConverter.cc  MipMap.cc  MipMap.h  SlowConverter.cc  SmartConverter.cc  Stats.cc  Stats.h  Util.cc  Util.h  common.h  main.cc
static/: fits2idiarc.example
